<resources>
    <string name="app_name" translatable="false">InstaTools</string>
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="search">Search</string>
    <string name="switchAccount">Switch Account</string>
    <string name="signOut">Sign Out</string>
    <string name="download">Download</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unsave">Unsave</string>
    <string name="backgroundTasks">Background Tasks</string>
    <string name="selectAll">Select All</string>
    <string name="deselectAll">Deselect All</string>
    <string name="deselectAllSure">Are you sure you want to deselect all these items?</string>
    <string name="viewProfile">View Profile</string>
    <string name="viewHere">View Here</string>
    <string name="viewInInsta">View in Instagram</string>
    <string name="addToFav">Add to favourites</string>
    <string name="removeFav">Remove from favourites</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="openDmInInsta">Open Chat in Instagram</string>
    <string name="sContinue">Continue</string>
    <string name="downloadAll">Download all slides</string>
    <string name="downloadThis">Download only this slide</string>
    <string name="downloadAudio">Download Audio</string>
    <string name="muteSound">Play/Mute Sound</string>
    <string-array name="bytes" translatable="false">
        <item>%d B</item>
        <item>%d KB</item>
        <item>%d MB</item>
        <item>%d GB</item>
        <item>%d TB</item>
    </string-array>
    <string name="maximum">Maximum: %s</string>
    <string name="unlimited">Unlimited</string>
    <string name="addShortcut">Add shortcut</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="save">Save</string>
    <string name="tryAgain">Try Again</string>
    <string name="openFolder">Open in Folder</string>
    <string name="deleteItemSure">Are you sure you want to delete this item?</string>
    <string name="listClear">Clear all</string>
    <string name="listClearSure">Are you sure you want to remove all the items?</string>
    <string name="importReadError">Unfortunately an error occurred while reading the file!</string>
    <string name="change">Change</string>
    <string name="noInternet">No internet connection!</string>
    <string name="connectionFailure">Couldn\'t connect to Instagram!</string>
    <string name="connectionBroken">Connection was broken!</string>
    <string name="loggedOut">You\'ve been logged out!</string>
    <string name="operationFailed">Operation failed; presumably you\'ve been logged out!</string>
    <string name="loggedOut401">You\'ve been logged out! (HTTP error code %s)</string>
    <string name="notFound">Not found!</string>
    <string name="manyRequests">
        Instagram gave a \"too many requests\" error; you can try again a few hours later! Sorry!!
    </string>
    <string name="httpError">HTTP error code %s!</string>
    <string name="addAccount">Add Account</string>
    <string name="enterWithoutAuth">Enter offline</string>
    <string name="browseInTheWeb">Browse the web</string>
    <string name="injectCookies">Inject cookies (TXT)</string>
    <string name="cookieInjectionSuccess">
        New cookies were saved. You may enter your account now.
    </string>
    <string name="unknownError">Sorry, an unknown error occurred: %s</string>
    <string name="needAuthentication">
        Instagram doesn\'t let us in. You need to login to continue&#8230;
    </string>
    <string name="unfollowers">Unfollowers</string>
    <string name="saved">Saved</string>
    <string name="direct">@string/export</string>
    <string name="signOutSure">Are you sure you want to sign out of your Instagram account?</string>
    <string name="mtSearch">Enter a profile name or link&#8230;</string>
    <string name="terminateBgTasks">
        Some tasks are running in the background. Are you sure you want to terminate them all?
    </string>
    <string name="alsoDeleteData">Also delete my user data and settings</string>
    <string name="toExit">Double tap to exit&#8230;</string>
    <string name="unfollow">Unfollow</string>
    <string name="unfollowPV">This account is private. Are you sure you want to unfollow them?</string>
    <string name="unfCouldNot">Could not unfollow this user!</string>
    <string name="unfEmpty">You have no unfollowers!</string>
    <string name="unfollowedAt">Unfollowed at %s</string>
    <string name="newUnfNtfChannel">New unfollowers</string>
    <string name="newUnfNtfChannelDesc">Some people just unfollowed you!</string>
    <string name="newUnfNtfText">%d new people have unfollowed you!</string>
    <string name="unsaveOnly">Unsave Only</string>
    <string name="downloadOnly">Download Only</string>
    <string name="unsaveDownload">Unsave &amp; Download</string>
    <string name="svdEmpty">You have no saved posts!</string>
    <string name="boxUntil">Until %s</string>
    <string name="exportHtml">Export to HTML</string>
    <string name="exportPdf">Export to PDF</string>
    <string name="exportTxt">Export to TXT</string>
    <string name="exportOptions">Export Options (%s)</string>
    <string name="export">Export</string>
    <string name="boxEmpty">You have no messages!</string>
    <string name="dmNotSeen">You Are Invisible!</string>
    <string name="dmNotSeenDesc">The messages you view in this app will NOT be marked as seen!</string>
    <string name="expOptImage">Include pictures</string>
    <string name="expOptVideo">Include videos</string>
    <string name="expOptVoice">Include voice messages</string>
    <string name="expOptLow">Low quality</string>
    <string name="expOptMed">Medium quality</string>
    <string name="expOptHig">High quality</string>
    <string name="expOptThm">Only a thumbnail (first frame)</string>
    <string name="unsupportedExportUriAuth">
        Sorry, but this kind of folder is not supported for this export type!
        Although you can export into this very folder in the other file types.
    </string>
    <string name="exportHtmlDesc">Caution: an HTML file can only be viewed properly using a PC or macOS!</string>
    <string name="exportPdfDesc">A PDF file cannot contain audio and video.</string>
    <string name="exportTxtDesc">A plain text file cannot contain any kind of media.</string>
    <string name="markAsSeen">Mark as seen</string>
    <string name="downloads">Downloads</string>
    <string name="dwShare">@string/download</string>
    <string name="pasteLink">Paste a link&#8230;</string>
    <string name="downloadsHelp1">
        1. Open Instagram,
        \n2. Choose a post or story,
        \n3. Share it into this app;
    </string>
    <string name="downloadsHelp2">so that it\'ll be downloaded immediately!</string>
    <string name="nonInstagramUrl">Sorry but this app downloads only Instagram content!</string>
    <string name="dtRetryAll">Retry all</string>
    <string name="dtPauseAll">Pause all</string>
    <string name="dtResumeAll">Resume all</string>
    <string name="dtExportLinks">Export links</string>
    <string name="dtImportLinks">Import links</string>
    <string name="dEmptyQueue">The download list is empty!</string>
    <string name="dGuestSure">
        You\'re in the guest mode and Instagram may not allow downloads without authentication!
        Are you sure you want to continue?
    </string>
    <string name="friends">Friends</string>
    <string name="friEmpty">You neither follow or are followed by anyone.</string>
    <string name="friFollows">follower</string>
    <string name="friFollowed">following</string>
    <string name="friPrivate">private</string>
    <string name="friBestie">close friend</string>
    <string name="friRestricted">restricted</string>
    <string name="friSep" translatable="false">,&#160;</string>
    <string name="favourites">Favourites</string>
    <string name="favouritesTb">Favourites (offline)</string>
    <string name="favEmpty">
        Open a profile in InstaTools and tap the \"heart\" icon at top right to add them into this list.
    </string>
    <string name="vwTitle">Profile Viewer</string>
    <string name="vwShare">View Profile</string>
    <string name="vwFollowers">Followers</string>
    <string name="vwFollowing">Following</string>
    <string name="vwFlwZero" translatable="false">0</string>
    <string name="vwPrivate">This account is private!</string>
    <string name="vwStoryReel">Main Stories</string>
    <string name="vwReelDesc">Contains %d items</string>
    <string name="vwNoReels">This profile has no stories!</string>
    <string name="vwNoTagged">This profile has no tagged posts!</string>
    <string name="vwLinkNotProfile">This link doesn\'t represent an IG profile!</string>
    <string name="settings">Settings</string>
    <string name="gSettings">Global Settings</string>
    <string name="aSettings">Settings of This Account</string>
    <string name="stDlPath">Main download folder</string>
    <string name="stBranching">Divide downloaded files into branches</string>
    <string name="stAliasing">Assign specific folders for profiles</string>
    <string name="stAddAlias">Add new exception</string>
    <string name="stAliasingDesc">
        Any file downloaded from this profile will be saved into this folder.
    </string>
    <string name="stAliasProfile">Enter profile user-name</string>
    <string name="addFolder">Add Folder</string>
    <string name="stCache">Caching (current size: %s)</string>
    <string name="stClearCache">Clear Cache</string>
    <string name="stClearCacheWaitExporter">Please wait until exporting finishes!</string>
    <string name="stUserData">User Data</string>
    <string name="stResetData">Reset all my user data</string>
    <string name="stResetDataSure">
        This includes the unfollowers list, the favourite accounts list, the download queue and the export queue.
        But you won\'t be signed out of your account. Proceed?
    </string>
    <string name="stResetSettings">Reset my settings</string>
    <string name="stResetSettingsSure">Are you sure? (you WON\'T be sign out of your account)</string>
    <string name="stAutoDeleteEmptyDirs">Automatically delete empty folders</string>
    <string name="stHelp">Help</string>
    <string name="stHelpMessage">
        The Settings of This Account inherit the Global Settings,
        wherever you leave a setting of this account empty.
    </string>
    <string name="stAlsoRevokePerm">
        Also revoke permission from the selected folder.
        (this cancels any other exception related to this folder)
    </string>
    <string name="downloaderChannel">Download queue</string>
    <string name="downloaderChannelDesc">Downloads media in a queue</string>
    <string name="downloaderTitle">Downloading&#8230;</string>
    <string name="downloaderTitleCount">Downloading %d items&#8230;</string>
    <string name="downloaderTitleCount1" translatable="false">Downloading %d item&#8230;</string>
    <string name="downloaderSomeFailed">Couldn\'t download %d items!</string>
    <string name="downloaderCannot">Cannot download from Instagram!</string>
    <string name="exporterChannel">Exporter</string>
    <string name="exporterChannelDesc">Exports the direct messages</string>
    <string name="exporterTitle">Exporting&#8230;</string>
    <string name="exporterFetchTexts">Fetched %1$d messages in %2$s\'s chat&#8230;</string>
    <string name="exporterFetchMedia">Fetching %1$d of %2$d media in %3$s\'s chat&#8230;</string>
    <string name="exporterWriting">Writing %s\'s chat into the storage&#8230;</string>
    <string name="exporterDone">Exported %s\'s chat.</string>
    <string name="exporterFailed">Export failed!</string>
</resources>