<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/dtControl"
        android:icon="@drawable/play"
        android:showAsAction="ifRoom"
        android:title="@string/start" />
    <item
        android:id="@+id/dtRetryAll"
        android:title="@string/dtRetryAll" />
    <item
        android:id="@+id/dtPauseAll"
        android:title="@string/dtPauseAll" />
    <item
        android:id="@+id/dtResumeAll"
        android:title="@string/dtResumeAll" />
    <item
        android:id="@+id/dtExportLinks"
        android:title="@string/dtExportLinks" />
    <item
        android:id="@+id/dtImportLinks"
        android:title="@string/dtImportLinks" />
    <item
        android:id="@+id/dtClearAll"
        android:title="@string/listClear" />
</menu>