<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ContentDescription,MissingConstraints">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/proPic"
        style="@style/shimmer"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/proPicIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@color/shimmerIvBg" />

        <View
            android:id="@+id/proClick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/vwFlwCl">

            <LinearLayout style="@style/vwFlwLl">

                <TextView
                    android:id="@+id/postsNum"
                    style="@style/vwFlwNum"
                    android:text="@string/vwFlwZero" />

                <TextView
                    style="@style/vwFlwText"
                    android:text="@string/vwPosts" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/vwFlwCl">

            <LinearLayout style="@style/vwFlwLl">

                <TextView
                    android:id="@+id/followersNum"
                    style="@style/vwFlwNum"
                    android:text="@string/vwFlwZero" />

                <TextView
                    style="@style/vwFlwText"
                    android:text="@string/vwFollowers" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/vwFlwCl">

            <LinearLayout style="@style/vwFlwLl">

                <TextView
                    android:id="@+id/followingNum"
                    style="@style/vwFlwNum"
                    android:text="@string/vwFlwZero" />

                <TextView
                    style="@style/vwFlwText"
                    android:text="@string/vwFollowing" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/privateAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="50dp"
            android:drawablePadding="15dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/vwPrivate"
            android:textAlignment="center"
            android:textSize="@dimen/guestFont"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</LinearLayout>