<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/root"
    tools:context=".Downloads"
    tools:ignore="ContentDescription,MissingConstraints">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:title="@string/downloads" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pasteBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pasteLink"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/pasteLink"
            android:layout_width="0dp"
            android:layout_height="@dimen/pasteLink"
            android:background="@null"
            android:focusedByDefault="true"
            android:hint="@string/pasteLink"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:textSize="@dimen/pasteLinkFont"
            app:layout_constraintEnd_toStartOf="@id/linkButton"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/linkButton"
            android:layout_width="@dimen/pasteLink"
            android:layout_height="@dimen/pasteLink"
            android:background="@drawable/button_round"
            android:padding="@dimen/pasteLinkPad"
            android:src="@drawable/download"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/jumperListPad"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pasteBar" />

    <LinearLayout
        android:id="@+id/empty"
        style="@style/tip"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rv"
        app:layout_constraintEnd_toEndOf="@id/rv"
        app:layout_constraintStart_toStartOf="@id/rv"
        app:layout_constraintTop_toTopOf="@id/rv">

        <TextView
            android:id="@+id/downloadsHelp1"
            style="@style/downloadsHelp"
            android:lineSpacingMultiplier="1.6"
            android:text="@string/downloadsHelp1"
            android:textSize="@dimen/downloadsHelp1" />

        <TextView
            android:id="@+id/downloadsHelp2"
            style="@style/downloadsHelp"
            android:layout_marginTop="36sp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/downloadsHelp2"
            android:textAlignment="center"
            android:textSize="@dimen/downloadsHelp2" />
    </LinearLayout>

    <ImageView
        android:id="@+id/jumper"
        style="@style/jumper" />

    <ViewStub
        android:id="@+id/guideSwipeDeleteStub"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout="@layout/guide_swipe_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>